@@ -1,5 +1,5 @@
 
-         Welcome to OpenLGTV BCM ver. 0.3.0-beta1
+         Welcome to OpenLGTV BCM ver. 0.3.0-beta2
                   http://openlgtv.org.ru/
 
     After first login change root password for yours TV!
