@@ -1,1 +1,1 @@
-0.3.0-beta1
+0.3.0-beta2
