@@ -116,6 +116,7 @@ Answer for people asking if they can use it if they have already made modificati
     * FIX: run DHCP client in background to not delay boot process in case of lack DHCP server connection
     * FIX: memory check problem on install or upgrade - now there's counted memory taken by buffers, too
     * FIX: do not run upgrade when there are not flashable files in upgrade dir
+    * FIX: Yahoo Widgets Engine vs Web Browser resolution incompatibility is now fixed
     * ADD: Changelog file to SVN
     * ADD: update time at boot using NTP servers pool
     * ADD: create /mnt/user/www dir if it does not exist
@@ -147,6 +148,7 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: WebUI is available without password on 127.0.0.1:88 and with root password authentication and user: openlgtv on 0.0.0.0:80 (accepting authenticated connections on LAN/WLAN)
     * ADD: making copy of boot log /var/log/OpenLGTV_BCM.log to USB storage device in OpenLGTV_BCM dir if it does not exist there - usally it should be first boot log
     * ADD: making default settings file /mnt/user/cfg/settings.default with comments
+    * ADD: making copy and changing Web Brower startup script to add 'killall lb4wk' - kill old browser instance at browser run - fix for YWE vs Web Browser incompatibility
     * UPDATE: haserl binary updated to version 0.9.28, compiled without LUA and BashExtensions support
     * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
     * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install
